kubernetes/simple-web/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  # labels:
  #   name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
