kubernetes/simple-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base
  labels:
    name: base
spec:
  rules:
  # - host: localhost
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: base
            port: 
              number: 8080
